@@ -1,5 +1,9 @@
 2003-03-18  John Levon  <levon@movementarian.org>
 
+	* pp/profile.cpp: improve mtime warning for 2.5 modules
+
+2003-03-18  John Levon  <levon@movementarian.org>
+
 	* pp/derive_files.cpp: some more 2.5 modules derivation fixes
 
 2003-03-18  Philippe Elie  <phil.el@wanadoo.fr>
